// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostRound renders and functions correctly PostRound renders correctly when role is not watcher 1`] = `
<div
  className="sc-fzpjYC eQOcJW"
>
  <div
    className="sc-AxjAm hDlFTS"
  >
    <div
      className="sc-AxiKw dGnLMo"
    >
      Cards Played
    </div>
    <div
      className="sc-AxhCb JZaCe"
    >
      <p
        className="sc-AxheI fpDqsA"
      >
        correct
      </p>
      <ul
        className="sc-Axmtr dHjpTi"
      >
        <li
          className="sc-AxgMl fFkiZt"
        >
          Kendrick Lamar
        </li>
      </ul>
      <p
        className="sc-AxheI fpDqsA"
      >
        skipped
      </p>
      <ul
        className="sc-Axmtr dHjpTi"
      >
        <li
          className="sc-AxgMl fFkiZt"
        >
          Simba
        </li>
      </ul>
      <p
        className="sc-AxheI fpDqsA"
      >
        discard
      </p>
      <ul
        className="sc-Axmtr dHjpTi"
      >
        <li
          className="sc-AxgMl fFkiZt"
        >
          Will Smith
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PostRound renders and functions correctly PostRound renders correctly when role is watcher 1`] = `
<div
  className="sc-fzpjYC eQOcJW"
>
  <div
    className="sc-AxjAm hDlFTS"
  >
    <div
      className="sc-AxiKw dGnLMo"
    >
      correct
    </div>
    <div
      className="sc-AxhCb JZaCe"
    >
      <ul
        className="sc-Axmtr dHjpTi"
      >
        <li
          className="sc-fzokOt gWWQxI"
        >
          <input
            className="sc-fzqBZW dVYnNZ"
            id="Kendrick Lamar"
            name="Kendrick Lamar"
            onChange={[Function]}
            type="radio"
            value={0}
          />
          <label
            className="sc-fzqNJr VlIuW"
            htmlFor="Kendrick Lamar"
          >
            Kendrick Lamar
          </label>
        </li>
      </ul>
    </div>
    <div
      className="sc-fzplWN buDbqD"
    >
      <button
        className="sc-AxmLO gmmVt button"
        disabled={true}
        onClick={[Function]}
      >
        skipped
      </button>
      <button
        className="sc-AxmLO sc-fzozJi jlLOkV button"
        disabled={true}
        onClick={[Function]}
      >
        discard
      </button>
    </div>
  </div>
  <div
    className="sc-AxjAm hDlFTS"
  >
    <div
      className="sc-AxiKw dGnLMo"
    >
      skipped
    </div>
    <div
      className="sc-AxhCb JZaCe"
    >
      <ul
        className="sc-Axmtr dHjpTi"
      >
        <li
          className="sc-fzokOt gWWQxI"
        >
          <input
            className="sc-fzqBZW dVYnNZ"
            id="Simba"
            name="Simba"
            onChange={[Function]}
            type="radio"
            value={1}
          />
          <label
            className="sc-fzqNJr VlIuW"
            htmlFor="Simba"
          >
            Simba
          </label>
        </li>
      </ul>
    </div>
    <div
      className="sc-fzplWN buDbqD"
    >
      <button
        className="sc-AxmLO gmmVt button"
        disabled={true}
        onClick={[Function]}
      >
        correct
      </button>
      <button
        className="sc-AxmLO sc-fzozJi jlLOkV button"
        disabled={true}
        onClick={[Function]}
      >
        discard
      </button>
    </div>
  </div>
  <div
    className="sc-AxjAm hDlFTS"
  >
    <div
      className="sc-AxiKw dGnLMo"
    >
      discard
    </div>
    <div
      className="sc-AxhCb JZaCe"
    >
      <ul
        className="sc-Axmtr dHjpTi"
      >
        <li
          className="sc-fzokOt gWWQxI"
        >
          <input
            className="sc-fzqBZW dVYnNZ"
            id="Will Smith"
            name="Will Smith"
            onChange={[Function]}
            type="radio"
            value={2}
          />
          <label
            className="sc-fzqNJr VlIuW"
            htmlFor="Will Smith"
          >
            Will Smith
          </label>
        </li>
      </ul>
    </div>
    <div
      className="sc-fzplWN buDbqD"
    >
      <button
        className="sc-AxmLO gmmVt button"
        disabled={true}
        onClick={[Function]}
      >
        correct
      </button>
      <button
        className="sc-AxmLO sc-fzozJi jlLOkV button"
        disabled={true}
        onClick={[Function]}
      >
        skipped
      </button>
    </div>
  </div>
  <button
    className="sc-AxmLO sc-fzoLsD cyAtQH"
    disabled={false}
    onClick={[Function]}
  >
    Confirm!
  </button>
</div>
`;
